Ignore unknown directories in repositories and origin directories during temporary storage initialization
Categories
(Core :: Storage: Quota Manager, defect, P3)
Tracking
()
People
(Reporter: tt, Unassigned)
References
(Depends on 1 open bug, Blocks 2 open bugs)
Details
(Whiteboard: [storage-jv] dom-lws-bugdash-triage)
Attachments
(2 files)
I believe this might be related to failures on Rep_RestoreDirMeta and Ori_UnexpectedClient
| Reporter | ||
Updated•6 years ago
|
Comment 1•6 years ago
|
||
Ori_UnexpectedClient yes, but why would this fix Rep_RestoreDirMeta ?
Comment 2•6 years ago
|
||
Oh I see.
| Reporter | ||
Comment 3•6 years ago
|
||
(In reply to Jan Varga [:janv] from comment #1)
Ori_UnexpectedClient yes, but why would this fix Rep_RestoreDirMeta ?
I suspect this could fix some of the errors in Rep_RestoreDirMeta. Currently, we just assume the directory should be parsable for GetDirectoryMetadata2WithRestoreHelper. If it's not, then we would get Rep_RestoreDirMeta.
I need to look into the code more to understand why we have so many failures on Rep_RestoreDirMeta, but I suspect at least part of them is because of this.
| Reporter | ||
Comment 4•6 years ago
|
||
Updated•6 years ago
|
| Reporter | ||
Comment 5•6 years ago
|
||
Depends on D51873
| Reporter | ||
Updated•6 years ago
|
Comment 7•6 years ago
|
||
| bugherder | ||
Comment 8•6 years ago
|
||
== Change summary for alert #24529 (as of Thu, 19 Dec 2019 08:03:17 GMT) ==
Improvements:
3% raptor-tp6-yahoo-mail-firefox-cold loadtime macosx1014-64-shippable opt 1,305.04 -> 1,265.33
3% raptor-tp6-yahoo-mail-firefox-cold macosx1014-64-shippable opt 784.06 -> 761.23
For up to date results, see: https://treeherder.mozilla.org/perf.html#/alerts?id=24529
Updated•6 years ago
|
Updated•6 years ago
|
Updated•6 years ago
|
Updated•6 years ago
|
Updated•6 years ago
|
Updated•5 years ago
|
| Reporter | ||
Updated•5 years ago
|
| Reporter | ||
Updated•5 years ago
|
Comment 9•5 years ago
|
||
The leave-open keyword is there and there is no activity for 6 months.
:janv, maybe it's time to close this bug?
Updated•5 years ago
|
Comment 10•4 years ago
|
||
The leave-open keyword is there and there is no activity for 6 months.
:janv, maybe it's time to close this bug?
Comment 11•4 years ago
|
||
The leave-open keyword is there and there is no activity for 6 months.
:janv, maybe it's time to close this bug?
Comment 12•4 years ago
|
||
I assume there is still one patch missing here, though the one attached here is surely bit-rotted.
Updated•3 years ago
|
Comment 13•3 years ago
|
||
The leave-open keyword is there and there is no activity for 6 months.
:edenchuang, maybe it's time to close this bug?
For more information, please visit auto_nag documentation.
Comment 14•3 years ago
|
||
(In reply to Release mgmt bot [:suhaib / :marco/ :calixte] from comment #13)
:edenchuang, maybe it's time to close this bug?
No.
Comment 15•1 year ago
|
||
We might want to do some more refactorings in this area, but the defect seems gone.
Updated•1 year ago
|
Updated•1 year ago
|
Description
•