Bug 1594075 - P1 - Ignore the unknown directories in origin directories; r=janv

Differential Revision: https://phabricator.services.mozilla.com/D51873

--HG--
extra : moz-landing-system : lando